--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
       font-family: "Doychland Sans";
       src: url(https://guikanntschjov.github.io/DoychlandSans/Doychland%20Sans.ttf)
     }
+      img.mySlides {width:90%}
   </style>
   <link href="../mystyle.css" rel="stylesheet" type="text/css"/>
   <iframe FRAMEBORDER=0 SCROLLING=no src="../CheapFonts/header.html" height="auto" width="100%"></iframe>
   
-  <img src="../CheapFonts/pics/DoychlandSans_title.png">
+  <img src="../CheapFonts/pics/DoychlandSans_title.png" style="margin:auto; width:50%">
     
   <p>基于<a href="https://www.1001freefonts.com/helico-centrica-roman.font">Helico Centrica Roman</a>改造的“无衬线德文尖角体”。因为并不算“屑字体”，所以单独给它建了个页面。。</p>
   
@@ -28,8 +29,9 @@
   <img class="mySlides" src="幻灯片10.PNG">
   <img class="mySlides" src="幻灯片11.PNG">
   <img class="mySlides" src="幻灯片12.PNG">
-  <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+    
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
 </div>
   <script>
     var slideIndex = 1;
@@ -52,9 +54,11 @@
 </script>
   
   <h3>网页字体预览</h3>
-  <div style="font-family: 'Doychland Sans'; width:90%; margin:0 auto; background-color: rgb(255, 255, 255, 0.35); border: solid 1px black">
+  <div style="font-family: 'Doychland Sans'; width:90%; margin:0 auto; background-color: rgb(255, 255, 255, 0.35); border: solid 1px black; padding:0.5em">
     <div style="font-size:200%;font-weight: bold;text-align: center">Lorem Ipsum</div>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Alle Menschen sind frei und gleich an Würde und Rechten geboren. Sie sind mit Vernunft und Gewissen begabt und sollen einander im Geist der Brüderlichkeit begegnen.</p>
+    <p>All human beings are born free and equal in dignity and rights. They are endowed with reason and conscience and should act towards one another in a spirit of brotherhood.</p>
   </div>
   
   <h3>下载</h3>
